# MedVLM_2

./: .gitignore  CLAUDE.md  SCRATCHPAD.md  pyproject.toml
docs/: data_guide.md  experiment_index.md
docs/knowledge_index/: index.json
docs/research_note/BrainCLIP/: 001_longitudinal_manifest_adni_clinical.md
docs/research_note/ReproSeg/: 001_reproseg_v1_ablation_plan.md  002_reproseg_v1_results_analysis.md
experiments/BrainCLIP/: README.md  RESULTS.md  SCRATCHPAD.md
experiments/BrainCLIP/configs/: exp01_baseline.toml  exp02_no_diag_text.toml  exp03_mri_finetune.toml  exp04_fixed_temp.toml
experiments/BrainCLIP/research_notes/: 001_brainclip_experiments.md
experiments/BrainCLIP/scripts/: build_brainclip_longitudinal_manifest.py  build_clinical_text.py  build_longitudinal_manifest.py  dataset_brainclip.py  eval_linear_probe.py  eval_retrieval.py  extract_mri_embeddings.py  generate_report.py  model_brainclip.py  run_pipeline.sh  train_brainclip.py
experiments/ReproSeg/: ARCHITECTURE.md  README.md  RESULTS.md  SCRATCHPAD.md
experiments/ReproSeg/research_notes/: 000_paper_overview.md  002_reproseg_v1_results_analysis.md  003_ablation_g_h_findings.md  004_final_icc_results_update.md  005_dice_results_analysis.md  006_critic_response_analysis.md  007_final_results_compilation.md  2026-04-05_ablation_findings.md  H_hard_paper_update_templates.md  PAPER_NOVELTY.md
experiments/dir1_cross_ethnic/: README.md
experiments/dir2_implicit_biomarker/: README.md
experiments/dir3_brain_vlm/: README.md
experiments/dir5_native_vs_mni/: README.md
(+12 files in other folders)
